<resources>
    <string name="app_name">管理系统</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="operation">操作</string>
    <string name="login">用户登录</string>
    <string name="name">姓名</string>
    <string name="job">职位</string>
    <string name="select_com">选择客户名称</string>
    <string name="fill_in_number">请输入想要创建的检具编号：</string>
    <string name="select_customer">选择客户名称</string>
    <string name="gauge_number">检具编号</string>
    <string name="fill_in_full_name">请输入检具全名：</string>
    <string name="gauge_fullname">检具全名</string>
    <string name="fill_in_project_name">请输入检具项目名</string>
    <string name="project_name">检具项目名</string>
    <string name="fill_in_project_master">请输入项目主管名字（不能出现错字）</string>
    <string name="project_master">项目主管</string>
    <string name="detail">检具详情</string>
    <string name="fullName">全名</string>
    <string name="stateNow">状态：</string>
    <string name="profullName">全名</string>
    <string name="orderMan">当前负责人：</string>
    <string name="fackOrderMan">（负责人）</string>
</resources>
