<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_single_project"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tec.zhang.CreateSingleProject">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/select_company"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="@dimen/fab_icon_size"
        android:text="@string/select_customer"/>
    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_company"
        android:layout_marginTop="12sp"
        android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"
        android:id="@+id/spinner1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_in_number"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/spinner1"
        android:layout_marginTop="12sp"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gauge_number"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/editText3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_in_full_name"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gauge_fullname"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/editText4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_in_project_name"
        android:layout_below="@+id/editText4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView6"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_name"
        android:id="@+id/editText5"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_in_project_master"
        android:layout_below="@+id/editText5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView7" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_master"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/editText6" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:src="@drawable/insert_choice"
        android:layout_marginBottom="34dp"
        android:id="@+id/floatingActionButton2" />
</RelativeLayout>
